# rl_for_llms

./: README.md  check_repo.sh  pyproject.toml  run_repo.sh  setup_pre_commit_hook.sh
data/training/: .gitignore
rl_for_llms/: main.py
rl_for_llms/logging/: logging.py
rl_for_llms/utils/: constant_utils.py  path_utils.py  training_utils.py
