[project]
name = "rl_for_llms"
version = "1.0.0"
description = "rl_for_llms"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "accelerate==1.10.0",
    "datasets==4.3.0",
    "dill==0.4.0",
    "fastapi[standard]==0.120.2",
    "grpcio==1.76.0",
    "hf-transfer==0.1.9",
    "hydra-core==1.3.2",
    "mathruler==0.1.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "optree==0.17.0",
    "pandas==2.3.3",
    "peft==0.17.1",
    "pyarrow==22.0.0",
    "pydantic==2.12.3",
    "qwen-vl-utils==0.0.14",
    "ray[default]==2.51.0",
    "tensordict==0.10.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchdata==0.11.0",
    "torchvision==0.23.0",
    "transformers[hf-xet]==4.57.1",
    "trl==0.24.0",
    "vllm==0.11.0",
    "wandb==0.22.3",
    "math-verify==0.8.0",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "ruff==0.14.2",
    "pytest==8.4.2",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D213", "COM812"]

[tool.mypy]
strict = true
